# orrSommerfeldSolver

./: LICENSE  Makefile  README.md
config/: input.toml
include/: config.hpp  flowProfiles.hpp  orr_sommerfeld.hpp  pp.hpp  read_conf.hpp  solver.hpp
libs/: fastgl.cpp  toml.hpp
others/: OS.py  OS_2D.m  OS_SQ_Operators.m  README.md  cheb4c.m  chebdif.m  main_with_debug.py
others/AFM_PROJECT_Amir_Asgharnia_and_Mahdi_Aliverdinia/: AFM Project code.txt  AFM_Project.m
others/Orr_Sommerfeld-0.0.8/: LICENSE  OS.py  PKG-INFO  README.md  setup.py
others/ccode/: CMakeLists.txt  misc.c
others/ccode/include/: EVproblem.h  misc.h
others/collocation_C/: EVproblem.c  main.c  misc.c
others/collocation_py/: EVproblem.py  dmsuite.py  main.py  postprocessing.py
src/: config.cpp  config.py  main.cpp  main.py  orr_sommerfeld.cpp  orr_sommerfeld_solver.cpp  pp.cpp  read_conf.cpp  solver.cpp
src_py/: config.py  postprocessing.py  readData.py  uprofiles.py
